--- a/web/redirect-external-links-to-new-tab/index.html
+++ b/web/redirect-external-links-to-new-tab/index.html
@@ -116,8 +116,11 @@ a happy user of this method :)</p>
 <p>The method just works. Nothing fancy about it, it does what is supposed to do.
 Thank you Austin!</p>
 
-              <div class="row">
-                <div class="11u">
+
+            </article>
+
+
+            <div class="article-sharing">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -182,11 +185,7 @@ Thank you Austin!</p>
          </li>
 
     </ul>
-<!-- Buttons end here -->                </div>
-              </div>
-
-            </article>
-
+<!-- Buttons end here -->            </div>
 
             <div class="comments" id="discussion">
               <h1>Comments</h1>
@@ -220,6 +219,7 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <span>Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</span>
+        <div style="max-width: 350px;text-align: center;display: block;margin: 0 auto;margin-top:1.2em;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -284,8 +284,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="box">
+<!-- Buttons end here -->        </div>
       </div>
       <div class="box">
       </div>
@@ -451,9 +450,7 @@ s.setAttribute('data-timestamp', +new Date());
     </header>
 
     <hr />
-    <div class="row">
-      <div class="4u"></div>
-      <div class="4u" style="margin-bottom: 42px;">
+    <div style="max-width:300px; display: block; margin: 0 auto 42px auto;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -518,9 +515,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="4u"></div>
-    </div>
+<!-- Buttons end here -->    </div>
   </div>
   <div id="copyright">
     <ul>
