--- a/embedded/slotcar-race/index.html
+++ b/embedded/slotcar-race/index.html
@@ -165,8 +165,11 @@ Right at this moment, the car was switched to state three, in which the algorith
 <h1>Summary</h1>
 <p>With this algoritm you will be able to have a strong foundtation for your own algorithm if you are faceing a similar contest. Feel free to contribute to the algorithm, to make it more durable.</p>
 
-              <div class="row">
-                <div class="11u">
+
+            </article>
+
+
+            <div class="article-sharing">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -231,11 +234,7 @@ Right at this moment, the car was switched to state three, in which the algorith
          </li>
 
     </ul>
-<!-- Buttons end here -->                </div>
-              </div>
-
-            </article>
-
+<!-- Buttons end here -->            </div>
 
             <div class="comments" id="discussion">
               <h1>Comments</h1>
@@ -269,6 +268,7 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <span>Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</span>
+        <div style="max-width: 350px;text-align: center;display: block;margin: 0 auto;margin-top:1.2em;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -333,13 +333,11 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="box">
-<div class="github-button">
-  <a href="https://github.com/tiborsimon" target="_blank" class="icon"><i class="fa fa-github-alt"></i></a>
-  <a href="https://github.com/tiborsimon/slotcar-race" target="_blank">Goto repo</a>
-  <a href="https://github.com/tiborsimon/slotcar-race/releases/latest" target="_blank"><i class="fa fa-download"></i> latest release</a>
+<!-- Buttons end here --><div class="github-button">
+  <a href="https://github.com/tiborsimon/slotcar-race" target="_blank"><i class="fa fa-github-alt"></i></a>
+  <a href="https://github.com/tiborsimon/slotcar-race/releases/latest" target="_blank"><i class="fa fa-download"></i></a>
 </div>
+        </div>
       </div>
       <div class="box">
       </div>
@@ -505,9 +503,7 @@ s.setAttribute('data-timestamp', +new Date());
     </header>
 
     <hr />
-    <div class="row">
-      <div class="4u"></div>
-      <div class="4u" style="margin-bottom: 42px;">
+    <div style="max-width:300px; display: block; margin: 0 auto 42px auto;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -572,9 +568,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="4u"></div>
-    </div>
+<!-- Buttons end here -->    </div>
   </div>
   <div id="copyright">
     <ul>
