--- a/python/fuzzy-search-and-sort-algorithm/index.html
+++ b/python/fuzzy-search-and-sort-algorithm/index.html
@@ -249,8 +249,11 @@ def _sort_result_list(result):
 </ol>
 </div>
 
-              <div class="row">
-                <div class="11u">
+
+            </article>
+
+
+            <div class="article-sharing">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -315,11 +318,7 @@ def _sort_result_list(result):
          </li>
 
     </ul>
-<!-- Buttons end here -->                </div>
-              </div>
-
-            </article>
-
+<!-- Buttons end here -->            </div>
 
             <div class="comments" id="discussion">
               <h1>Comments</h1>
@@ -353,6 +352,7 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <span>Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</span>
+        <div style="max-width: 350px;text-align: center;display: block;margin: 0 auto;margin-top:1.2em;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -417,8 +417,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="box">
+<!-- Buttons end here -->        </div>
       </div>
       <div class="box">
       </div>
@@ -584,9 +583,7 @@ s.setAttribute('data-timestamp', +new Date());
     </header>
 
     <hr />
-    <div class="row">
-      <div class="4u"></div>
-      <div class="4u" style="margin-bottom: 42px;">
+    <div style="max-width:300px; display: block; margin: 0 auto 42px auto;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -651,9 +648,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="4u"></div>
-    </div>
+<!-- Buttons end here -->    </div>
   </div>
   <div id="copyright">
     <ul>
