--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -156,8 +156,11 @@ Not so horrible, is it. But. We are talking about permutation. If you want to ad
 <span class="nf">print</span><span class="p">(</span><span class="nf">generate_mandatory_arbitrary</span><span class="p">(</span><span class="s-Atom">&#39;abc&#39;</span><span class="p">))</span>
 </pre></div>
 
-              <div class="row">
-                <div class="11u">
+
+            </article>
+
+
+            <div class="article-sharing">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -222,11 +225,7 @@ Not so horrible, is it. But. We are talking about permutation. If you want to ad
          </li>
 
     </ul>
-<!-- Buttons end here -->                </div>
-              </div>
-
-            </article>
-
+<!-- Buttons end here -->            </div>
 
             <div class="comments" id="discussion">
               <h1>Comments</h1>
@@ -260,6 +259,7 @@ s.setAttribute('data-timestamp', +new Date());
       <div class="box">
         <img class="widget-avatar" src="https://tiborsimon.io/images/tibor4.jpg" width=300 alt="Image of Tibor Simon" />
         <span>Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</span>
+        <div style="max-width: 350px;text-align: center;display: block;margin: 0 auto;margin-top:1.2em;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -324,8 +324,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="box">
+<!-- Buttons end here -->        </div>
       </div>
       <div class="box">
       </div>
@@ -491,9 +490,7 @@ s.setAttribute('data-timestamp', +new Date());
     </header>
 
     <hr />
-    <div class="row">
-      <div class="4u"></div>
-      <div class="4u" style="margin-bottom: 42px;">
+    <div style="max-width:300px; display: block; margin: 0 auto 42px auto;">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
@@ -558,9 +555,7 @@ s.setAttribute('data-timestamp', +new Date());
          </li>
 
     </ul>
-<!-- Buttons end here -->      </div>
-      <div class="4u"></div>
-    </div>
+<!-- Buttons end here -->    </div>
   </div>
   <div id="copyright">
     <ul>
