--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -28,11 +28,10 @@
   <meta property="article:tag" content="" />
   <meta property="article:author" content="Tibor Simon" />
 
-      <meta name="twitter:card" content="summary" />
-      <meta name="twitter:site" content="@tiborsimonio" />
-      <meta name="twitter:title" content="Tibor Simon - Engineering with Passion" />
-      <meta name="twitter:description" content="A blog and portfolio about programming, engineering, electronics and music. Tibor, the host, is a graduated electrical engineer from Budapest." />
-      <meta name="twitter:image" content="https://tiborsimon.io/images/tibor4.jpg" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@tiborsimonio" />
+  <meta name="twitter:title" content="Mandatory + arbitrary order" />
+  <meta name="twitter:description" content="What regular expression pattern would you use if you want to ....." />
 
   </head>
 
@@ -177,7 +176,7 @@ Not so horrible, is it. But. We are talking about permutation. If you want to ad
 
           <li class="rrssb-twitter">
             <!-- Replace href with your Meta and URL information  -->
-            <a href="https://twitter.com/intent/tweet?text=Ridiculously%20Responsive%20Social%20Sharing%20Buttons%20by%20%40dbox%20and%20%40joshuatuscan%3A%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%20%7C%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%2Fmedia%2Frrssb-preview.png"
+            <a href="https://twitter.com/intent/tweet?text=https://tiborsimon.io/Mandatory + arbitrary order - https://tiborsimon.io/What regular expression pattern would you use if you want to ... https://tiborsimon.io/python/mandatory-arbitrary-order/"
             class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M24.253 8.756C24.69 17.08 18.297 24.182 9.97 24.62a15.093 15.093 0 0 1-8.86-2.32c2.702.18 5.375-.648 7.507-2.32a5.417 5.417 0 0 1-4.49-3.64c.802.13 1.62.077 2.4-.154a5.416 5.416 0 0 1-4.412-5.11 5.43 5.43 0 0 0 2.168.387A5.416 5.416 0 0 1 2.89 4.498a15.09 15.09 0 0 0 10.913 5.573 5.185 5.185 0 0 1 3.434-6.48 5.18 5.18 0 0 1 5.546 1.682 9.076 9.076 0 0 0 3.33-1.317 5.038 5.038 0 0 1-2.4 2.942 9.068 9.068 0 0 0 3.02-.85 5.05 5.05 0 0 1-2.48 2.71z"/></svg>
@@ -189,7 +188,7 @@ Not so horrible, is it. But. We are talking about permutation. If you want to ad
 
           <li class="rrssb-linkedin">
             <!-- Replace href with your meta and URL information -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/%3Cp%3EWhat%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F%3C/p%3E" class="popup">
+            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/What%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F" class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
               </span>
@@ -276,7 +275,7 @@ s.setAttribute('data-timestamp', +new Date());
 
           <li class="rrssb-twitter">
             <!-- Replace href with your Meta and URL information  -->
-            <a href="https://twitter.com/intent/tweet?text=Ridiculously%20Responsive%20Social%20Sharing%20Buttons%20by%20%40dbox%20and%20%40joshuatuscan%3A%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%20%7C%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%2Fmedia%2Frrssb-preview.png"
+            <a href="https://twitter.com/intent/tweet?text=https://tiborsimon.io/Mandatory + arbitrary order - https://tiborsimon.io/What regular expression pattern would you use if you want to ... https://tiborsimon.io/python/mandatory-arbitrary-order/"
             class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M24.253 8.756C24.69 17.08 18.297 24.182 9.97 24.62a15.093 15.093 0 0 1-8.86-2.32c2.702.18 5.375-.648 7.507-2.32a5.417 5.417 0 0 1-4.49-3.64c.802.13 1.62.077 2.4-.154a5.416 5.416 0 0 1-4.412-5.11 5.43 5.43 0 0 0 2.168.387A5.416 5.416 0 0 1 2.89 4.498a15.09 15.09 0 0 0 10.913 5.573 5.185 5.185 0 0 1 3.434-6.48 5.18 5.18 0 0 1 5.546 1.682 9.076 9.076 0 0 0 3.33-1.317 5.038 5.038 0 0 1-2.4 2.942 9.068 9.068 0 0 0 3.02-.85 5.05 5.05 0 0 1-2.48 2.71z"/></svg>
@@ -288,7 +287,7 @@ s.setAttribute('data-timestamp', +new Date());
 
           <li class="rrssb-linkedin">
             <!-- Replace href with your meta and URL information -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/%3Cp%3EWhat%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F%3C/p%3E" class="popup">
+            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/What%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F" class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
               </span>
@@ -507,7 +506,7 @@ s.setAttribute('data-timestamp', +new Date());
 
           <li class="rrssb-twitter">
             <!-- Replace href with your Meta and URL information  -->
-            <a href="https://twitter.com/intent/tweet?text=Ridiculously%20Responsive%20Social%20Sharing%20Buttons%20by%20%40dbox%20and%20%40joshuatuscan%3A%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%20%7C%20http%3A%2F%2Fkurtnoble.com%2Flabs%2Frrssb%2Fmedia%2Frrssb-preview.png"
+            <a href="https://twitter.com/intent/tweet?text=https://tiborsimon.io/Mandatory + arbitrary order - https://tiborsimon.io/What regular expression pattern would you use if you want to ... https://tiborsimon.io/python/mandatory-arbitrary-order/"
             class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M24.253 8.756C24.69 17.08 18.297 24.182 9.97 24.62a15.093 15.093 0 0 1-8.86-2.32c2.702.18 5.375-.648 7.507-2.32a5.417 5.417 0 0 1-4.49-3.64c.802.13 1.62.077 2.4-.154a5.416 5.416 0 0 1-4.412-5.11 5.43 5.43 0 0 0 2.168.387A5.416 5.416 0 0 1 2.89 4.498a15.09 15.09 0 0 0 10.913 5.573 5.185 5.185 0 0 1 3.434-6.48 5.18 5.18 0 0 1 5.546 1.682 9.076 9.076 0 0 0 3.33-1.317 5.038 5.038 0 0 1-2.4 2.942 9.068 9.068 0 0 0 3.02-.85 5.05 5.05 0 0 1-2.48 2.71z"/></svg>
@@ -519,7 +518,7 @@ s.setAttribute('data-timestamp', +new Date());
 
           <li class="rrssb-linkedin">
             <!-- Replace href with your meta and URL information -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/%3Cp%3EWhat%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F%3C/p%3E" class="popup">
+            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/python/mandatory-arbitrary-order/&amp;title=https://tiborsimon.io/Mandatory%20%2B%20arbitrary%20order&amp;summary=https://tiborsimon.io/What%20regular%20expression%20pattern%20would%20you%20use%20if%20you%20want%20to%20match%20a%20word%20with%20mandatory%20characters%20in%20it%20but%20in%20arbitrary%20order%3F" class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
               </span>
@@ -572,31 +571,6 @@ s.setAttribute('data-timestamp', +new Date());
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr"></script>
-
-  <script type="text/javascript">
-    var addthis_share = addthis_share || {}
-    addthis_share = {
-      passthrough : {
-        twitter: {
-          via: "tiborsimonio",
-          text: "Tibor Simon - What regular expression pattern would you use if you want to ....."
-        }
-      },
-      url_transforms : {
-           shorten: {
-                twitter: 'bitly'
-           }
-      },
-      shorteners : {
-           bitly : {}
-      }
-    }
-  </script>
-
-  <script>
-
-  </script>
-
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
