--- a/tools/buspirate-setup-for-osx/index.html
+++ b/tools/buspirate-setup-for-osx/index.html
@@ -515,7 +515,9 @@ s.setAttribute('data-timestamp', +new Date());
       <li>&copy; Tibor Simon</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
   </div>
-</div>    </div>
+<div class="site-info">
+  Last build: 2016-03-06 15:20
+</div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr"></script>
