--- a/web/minimal-mathjax-package/index.html
+++ b/web/minimal-mathjax-package/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-      <title>tiborsimon.io</title>
+  <title>Minimal MathJax package - Tibor Simon</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="https://tiborsimon.io/theme/js/ie/html5shiv.js"></script><![endif]-->
@@ -627,7 +627,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-08 23:24
+  Last build: 2016-03-09 01:02
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
