--- a/web/minimal-mathjax-package/index.html
+++ b/web/minimal-mathjax-package/index.html
@@ -373,7 +373,7 @@ s.setAttribute('data-timestamp', +new Date());
 
         <!-- TAGS -->
             <i class="fa fa-tags"></i>
-                <a href="https://tiborsimon.io/tag/ios.html">ios</a>,                 <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/swift.html">swift</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>
+                <a href="https://tiborsimon.io/tag/mathjax.html">MathJax</a>,                 <a href="https://tiborsimon.io/tag/ios.html">ios</a>,                 <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/swift.html">swift</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>
       </div>
   </div>
 
@@ -402,6 +402,9 @@ s.setAttribute('data-timestamp', +new Date());
   <div class="tagcloud">
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/LaTEX.html">LaTEX</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/MathJax.html">MathJax</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
@@ -627,7 +630,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:02
+  Last build: 2016-03-09 01:04
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
