--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -474,6 +474,9 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="https://tiborsimon.io/tag/LaTEX.html">LaTEX</a>
       </span>
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/MathJax.html">MathJax</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
       </span>
       <span class="tagcloud-button">
@@ -697,7 +700,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:02
+  Last build: 2016-03-09 01:04
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
