--- a/web/minimal-mathjax-package/index.html
+++ b/web/minimal-mathjax-package/index.html
@@ -14,7 +14,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="https://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
 
   <meta name="author" content="Tibor Simon" />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="MathJax, local, solution, xcode, ios, hack, javascript, swift, math, LaTEX" />
   <meta name="description" content="MathJax is a pretty big javascript package, but you can make it work after you stripped off most of the files. The final package size could be around 623KB." />
 
   <meta property="fb:app_id" content="551628881652865" />
@@ -84,7 +84,7 @@
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="https://tiborsimon.io/tag/hack.html">hack</a>,           <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,           <a href="https://tiborsimon.io/tag/math.html">math</a>,           <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>
+          <a href="https://tiborsimon.io/tag/mathjax.html">MathJax</a>,           <a href="https://tiborsimon.io/tag/hack.html">hack</a>,           <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,           <a href="https://tiborsimon.io/tag/math.html">math</a>,           <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>
   <!-- SERIES -->
     <span class="article-series padded-icon">
       <i class="fa fa-briefcase"></i>
@@ -391,7 +391,7 @@ s.setAttribute('data-timestamp', +new Date());
 
         <!-- TAGS -->
             <i class="fa fa-tags"></i>
-                <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>      </div>
+                <a href="https://tiborsimon.io/tag/mathjax.html">MathJax</a>,                 <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>      </div>
   </div>
 
 </aside>
@@ -630,7 +630,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:04
+  Last build: 2016-03-09 01:07
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
