--- a/ios/local-mathjax-in-ios-apps/index.html
+++ b/ios/local-mathjax-in-ios-apps/index.html
@@ -14,7 +14,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="https://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
 
   <meta name="author" content="Tibor Simon" />
-  <meta name="keywords" content="M,a,t,h,J,a,x,,, ,l,o,c,a,l,,, ,s,o,l,u,t,i,o,n,,,x,c,o,d,e,,, ,i,o,s,,, ,h,a,c,k,,, ,j,a,v,a,s,c,r,i,p,t,,, ,s,w,i,f,t,,, ,m,a,t,h,,, ,L,a,T,E,X" />
+  <meta name="keywords" content="MathJax, local, solution,xcode, ios, hack, javascript, swift, math, LaTEX" />
   <meta name="description" content="Integrating MathJax locally in an iOS app to be able to use mathematical equations stored in LaTEX." />
 
   <meta property="fb:app_id" content="551628881652865" />
@@ -454,7 +454,7 @@ s.setAttribute('data-timestamp', +new Date());
 
         <!-- TAGS -->
             <i class="fa fa-tags"></i>
-                <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>      </div>
+                <a href="https://tiborsimon.io/tag/mathjax.html">MathJax</a>,                 <a href="https://tiborsimon.io/tag/hack.html">hack</a>,                 <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,                 <a href="https://tiborsimon.io/tag/math.html">math</a>,                 <a href="https://tiborsimon.io/tag/latex.html">LaTEX</a>      </div>
   </div>
 </aside>
       </div>
@@ -692,7 +692,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:04
+  Last build: 2016-03-09 01:07
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
