--- a/archives.html
+++ b/archives.html
@@ -111,7 +111,7 @@
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
+          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortex.html">tortex</a>,           <a href="https://tiborsimon.io/tag/dunlop-tortex.html">dunlop tortex</a>,           <a href="https://tiborsimon.io/tag/john.html">John</a>,           <a href="https://tiborsimon.io/tag/frusciante.html">Frusciante</a>,           <a href="https://tiborsimon.io/tag/rhcp.html">RHCP</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
   <!-- SERIES -->
 
   <!-- GITHUB -->
@@ -377,7 +377,7 @@
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:07
+  Last build: 2016-03-09 07:31
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
