--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -84,7 +84,7 @@
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
+          <a href="https://tiborsimon.io/tag/guitar.html">guitar</a>,           <a href="https://tiborsimon.io/tag/pick.html">pick</a>,           <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>,           <a href="https://tiborsimon.io/tag/tortex.html">tortex</a>,           <a href="https://tiborsimon.io/tag/dunlop-tortex.html">dunlop tortex</a>,           <a href="https://tiborsimon.io/tag/john.html">John</a>,           <a href="https://tiborsimon.io/tag/frusciante.html">Frusciante</a>,           <a href="https://tiborsimon.io/tag/rhcp.html">RHCP</a>,           <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>,           <a href="https://tiborsimon.io/tag/statistics.html">statistics</a>
   <!-- SERIES -->
 
   <!-- GITHUB -->
@@ -779,10 +779,19 @@ s.setAttribute('data-timestamp', +new Date());
   <h2 class="widget-title"><a href="https://tiborsimon.io/tags.html">Tags</a></h2>
   <div class="tagcloud">
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/Frusciante.html">Frusciante</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/John.html">John</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/LaTEX.html">LaTEX</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/MathJax.html">MathJax</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/RHCP.html">RHCP</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
@@ -804,6 +813,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/dunlop tortex.html">dunlop tortex</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/embedded.html">embedded</a>
@@ -876,6 +888,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tools.html">tools</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/tortex.html">tortex</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
@@ -1008,7 +1023,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:07
+  Last build: 2016-03-09 07:31
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
