--- a/web/redirect-external-links-to-new-tab/index.html
+++ b/web/redirect-external-links-to-new-tab/index.html
@@ -284,10 +284,19 @@ s.setAttribute('data-timestamp', +new Date());
   <h2 class="widget-title"><a href="https://tiborsimon.io/tags.html">Tags</a></h2>
   <div class="tagcloud">
       <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/Frusciante.html">Frusciante</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/John.html">John</a>
+      </span>
+      <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/LaTEX.html">LaTEX</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/MathJax.html">MathJax</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/RHCP.html">RHCP</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/accelerometer.html">accelerometer</a>
@@ -309,6 +318,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/dunlop.html">dunlop</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/dunlop tortex.html">dunlop tortex</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/embedded.html">embedded</a>
@@ -381,6 +393,9 @@ s.setAttribute('data-timestamp', +new Date());
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tools.html">tools</a>
+      </span>
+      <span class="tagcloud-button">
+        <a href="https://tiborsimon.io/tag/tortex.html">tortex</a>
       </span>
       <span class="tagcloud-button">
         <a href="https://tiborsimon.io/tag/tortextime.html">tortextime</a>
@@ -513,7 +528,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 01:07
+  Last build: 2016-03-09 07:31
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
