--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -14,7 +14,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="https://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
 
   <meta name="author" content="Tibor Simon" />
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="guitar, pick, dunlop, tortex, dunlop tortex, John, Frusciante, RHCP, tortextime, statistics" />
   <meta name="description" content="I have bought 60 piece of guitar picks to make it impossible to run out of pick in the next 4-5 years. I am going to keep track of every pick, so you can follow the progress with me :)" />
 
   <meta property="fb:app_id" content="551628881652865" />
@@ -1008,7 +1008,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-09 07:33
+  Last build: 2016-03-09 07:35
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
